--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <h3>Geometry Dash</h3>
                         <p>Rhythm-based platforming game - Version 2.2074</p>
                     </div>
-                    <button class="download-btn" onclick="downloadGame('https://contact.onlinechildcareclass.com/scramjet/https%3A%2F%2Fdrive.usercontent.google.com%2Fdownload?id=1AkdliQTcjEEPpbKPbmHrT_gK9JYtsNiB&confirm=t&uuid=c1af43c9-2e08-406b-84ab-0348bf2b7052')">Download</button>
+                    <button class="download-btn" onclick="downloadGame('https://contact.onlinechildcareclass.com/scramjet/https://pixeldrain.com/api/file/Bfc5ghsB')">Download</button>
                 </div>
             </div>
 
